Fix config.js & letter-spacing

--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -17,7 +17,8 @@
   }
 
   &__body {
-    font-size: $typographic-base-font-size;
+    font-size: $typographic-base-font-size * 0.925;
+    letter-spacing: -0.8px;
     @include line-height(1);
     @include margin(0, 0, 1);
   }
