--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -45,6 +45,7 @@
           max-width: $layout-post-width;
           font-size: $typographic-base-font-size * 1.6817;
           margin-top: 0;
+          letter-spacing: -0.75px;
           @include margin-bottom(1);
           @include line-height(1.5);
         }
@@ -102,6 +103,7 @@
 
       & p {
         font-size: $typographic-base-font-size * 1;
+        letter-spacing: -0.75px;
         @include line-height(1.125);
         @include margin-bottom(0.625);
       }
